InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductJurisdictionNetwork__c/vlocity_ins__ProductJurisdictionNetwork__c.object-meta.xml
<CustomObject>
    <description>Identifies a Network that provides benefits for a given Plan Type (i.e. product) under a given jurisdiction. Used when an insurance plan is sold across multiple jurisdictions under different provider networks. For example Simplicity/Plan 160 is sold in state of Illinois(IL) and Florida (FL). In FL it is available under the HMO Select Network but in IL same plan is available under HMO Select &amp; Loyola CCN networks.</description>
    <label>Product Jurisdiction Network</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Jurisdiction Networks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>