InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductJurisdictionNetwork__c/fields/vlocity_ins__Product2Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the insurance product/plan.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Jurisdiction Networks</relationshipLabel>
    <relationshipName>JurisdictionNetworks</relationshipName>
    <type>Lookup</type>
</CustomField>