InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductJurisdictionNetwork__c/validationRules/vlocity_ins__ProductId.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ins__ProductId</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( vlocity_ins__Product2Id__c )</errorConditionFormula>
    <errorDisplayField>vlocity_ins__Product2Id__c</errorDisplayField>
    <errorMessage>Product Id should not be blank.</errorMessage>
</ValidationRule>